[package]
name = "pprzlink"
version = "0.3.1"
authors = ["Michal Podhradsky <michal.podhradsky@galois.com>"]
description = "Rust library for pprzlink"
license = "GPL-3.0"
documentation = "https://docs.rs/pprzlink/"
homepage = "https://github.com/paparazzi/pprzlink-rust"
repository = "https://github.com/paparazzi/pprzlink-rust"
keywords = ["UAV", "pprzlink","paparazzi"]
categories = ["embedded", "parsing","parser-implementations"]

[dependencies]
xml-rs = "0.6"
ivyrust = "0.1.1"
byteorder = "1.1.0"