[package]
name = "rust-pprzlink"
version = "0.1.0"
authors = ["Michal Podhradsky <mpodhradsky@galois.com>"]
edition = "2018"
build = "build/main.rs"

[build-dependencies]
xml-rs = "0.2"
quote = "0.3"
rustfmt = "0.9"
changecase = "0.0.7"

[dependencies]
bytes = "0.4"

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[features]
"serde-derive" = ["serde", "serde_derive","std"]
"test-serde" = ["serde_json", "serde-derive"]
std=[]
default = ["std"]
